# dckrmgrtl

./: .gitignore  LICENSE  README.md  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docker_manager/: __init__.py  __main__.py
docker_manager/core/: container_manager.py  health_report.py  image_manager.py  service_manager.py
docker_manager/scripts/: dsm
docker_manager/ui/: cli.py  interactive.py  onboarding.py
docs/: README.md
docs/api/: README.md
docs/development/: README.md
docs/guides/: getting_started.md  user_guide.md
