[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-manager"
version = "1.0.0"
description = "A cross-platform Docker daemon control tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "cosmic soul", email = "stallionsprit@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["docker", "service", "management", "cross-platform", "container", "monitoring", "health-report"]
dependencies = [
    "blessed>=1.20.0",
    "docker>=7.1.0",
    "matplotlib>=3.10.1",
    "psutil>=7.0.0",
    "py-cui>=0.1.6",
    "setuptools>=77.0.3",
    "tabulate>=0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/Sunilkarkee/dckmngrtool"
"Bug Tracker" = "https://github.com/Sunilkarkee/dckmngrtool/issues"
"Documentation" = "https://github.com/Sunilkarkee/dckmngrtool#readme"
"Source Code" = "https://github.com/Sunilkarkee/dckmngrtool"

[project.scripts]
docker-manager = "docker_manager:main"
dsm = "docker_manager:main"

[tool.setuptools]
packages = ["docker_manager"]
include-package-data = true
